# hpmc

./: .gitignore  CMakeLists.txt  Doxyfile  FindGLEW.cmake  NEWS  README.md  index.html  params.json
apps/cayley/: cayley.cpp
apps/common/: common.cpp  common.hpp
apps/formula/: formula.cpp
apps/metaballs/: metaballs.cpp
apps/particles/: particles.cpp
apps/shaders/: cayley_fetch.glsl  metaballs_fetch.glsl  particle_vs_130.glsl  particle_vs_140.glsl  particles_anim_gs_150.glsl  particles_anim_vs_150.glsl  particles_billboard_fs_150.glsl  particles_billboard_gs_150.glsl  particles_billboard_vs_150.glsl  particles_emitter_gs_150.glsl  particles_emitter_vs_150.glsl  particles_fetch.glsl  particles_shape_fs_150.glsl  particles_shape_vs_150.glsl  phong_fs_110.glsl  phong_fs_130.glsl  phong_vbo_vs_420.glsl  phong_vs_110.glsl  phong_vs_130.glsl  plain_vs_110.glsl  plain_vs_130.glsl  shiny_fs_110.glsl  shiny_fs_130.glsl  shiny_vs_110.glsl  shiny_vs_130.glsl  solid_fs_110.glsl  solid_fs_130.glsl  solid_vs_110.glsl  solid_vs_130.glsl  splatting_fs_130.glsl  splatting_fs_140.glsl  splatting_vs_130.glsl  splatting_vs_140.glsl
apps/splatting/: splatting.cpp
apps/texture3D/: texture3D.cpp
apps/texture3d/: texture3d.cpp
apps/texture_cuda/: texture_cuda.cu
apps/transform_feedback/: transform_feedback.cpp
cmake/Modules/: txt2cpp.cmake
cuhpmc/kernels/: hp5_buildup_apex.cu  hp5_buildup_base_triple_gb.cu  hp5_buildup_base_triple_gb.hpp  hp5_buildup_level_double.hpp  hp5_buildup_level_single.hpp  hp5_writer.cu  hp5_writer.hpp
cuhpmc/shaders/: gl_direct_fs_430.glsl  gl_direct_gs_430.glsl  gl_direct_vs_430.glsl  mc_extract_430.glsl  mc_per_cell_430.glsl
cuhpmc/src/: AbstractField.cpp  AbstractIsoSurface.cpp  AbstractWriter.cpp  Constants.cpp  EmitterTriVtx.cpp  EmitterTriVtxCUDA.cpp  Field.cpp  FieldGLBufferUChar.cpp  FieldGlobalMemUChar.cpp  GLDirectWriter.cpp  GLFieldUCharBuffer.cpp  GLIsoSurface.cpp  GLWriter.cpp  IsoSurface.cpp  IsoSurfaceCUDA.cpp  IsoSurfaceGL.cpp  IsoSurfaceGLInterop.cpp  TriangleVertexWriter.cpp
glhpmc/shaders/: baselevel_traversal_110.glsl  downtraversal_110.glsl
glhpmc/src/: BaseLevelBuilder.cpp  Constants.cpp  Field.cpp  FieldTexture3D.cpp  GPGPUQuad.cpp  HistoPyramid.cpp  IntersectingEdgeTable.cpp  IsoSurface.cpp  IsoSurfaceRenderer.cpp  Logger.cpp  PublicAPI.cpp  SequenceRenderer.cpp  VertexCountTable.cpp  shadergen.cpp  tables.cpp  util.cpp
hpmc/include/: hpmc.h  hpmc_internal.h
hpmc/shaders/: baselevel_traversal_110.glsl  downtraversal_110.glsl  downtraversal_130.glsl  reduction_first_fs_110.glsl  reduction_first_fs_130.glsl  reduction_upper_fs_110.glsl  reduction_upper_fs_130.glsl
hpmc/src/: BaseLevelBuilder.cpp  BaseLevelBuilder.hpp  Constants.cpp  Constants.hpp  Field.cpp  Field.hpp  GPGPUQuad.cpp  GPGPUQuad.hpp  HistoPyramid.cpp  HistoPyramid.hpp  IntersectingEdgeTable.cpp  IntersectingEdgeTable.hpp  IsoSurface.cpp  IsoSurface.hpp  IsoSurfaceRenderer.cpp  IsoSurfaceRenderer.hpp  Logger.cpp  Logger.hpp  PublicAPI.cpp  SequenceRenderer.cpp  SequenceRenderer.hpp  VertexCountTable.cpp  VertexCountTable.hpp  buildpass.cpp  constants.cpp  hpiface.cpp  hpmc_build.cpp  hpmc_constants.cpp  hpmc_handle.cpp  hpmc_init.cpp  hpmc_internal.h  hpmc_shadergen.cpp  hpmc_tables.cpp  hpmc_traversal.cpp  hpmc_util.cpp  init.cpp  shaderbuild.cpp  shadergen.cpp  tables.cpp  texfbosetup.cpp  (+2 more)
include/cuhpmc/: AbstractField.hpp  AbstractIsoSurface.hpp  AbstractWriter.hpp  CUDAErrorException.hpp  Constants.hpp  EmitterTriIdx.hpp  EmitterTriVtx.hpp  EmitterTriVtxCUDA.hpp  Field.hpp  FieldCUDA.hpp  FieldGL.hpp  FieldGLBufferUChar.hpp  FieldGlobalMemUChar.hpp  GLDirectWriter.hpp  GLFieldUCharBuffer.hpp  GLIsoSurface.hpp  GLWriter.hpp  IsoSurface.hpp  IsoSurfaceCUDA.hpp  IsoSurfaceGL.hpp  IsoSurfaceGLInterop.hpp  IsoSurfaceIndexed.hpp  NonCopyable.hpp  Tables.hpp  TriangleVertexWriter.hpp  cuhpmc.hpp
include/glhpmc/: BaseLevelBuilder.hpp  Constants.hpp  Field.hpp  FieldTexture3D.hpp  GPGPUQuad.hpp  HistoPyramid.hpp  IntersectingEdgeTable.hpp  IsoSurface.hpp  IsoSurfaceRenderer.hpp  Logger.hpp  SequenceRenderer.hpp  VertexCountTable.hpp  glhpmc.hpp  glhpmc_internal.hpp
src/cuhpmc/: Constants.cpp  EmitterTriIdx.cpp  EmitterTriVtxCUDA.cpp  EmitterTriVtxGL.cpp  FieldGLBufferUChar.cpp  FieldGlobalMemUChar.cpp  IsoSurface.cpp  IsoSurfaceCUDA.cpp  IsoSurfaceGL.cpp  IsoSurfaceIndexed.cpp  Tables.cpp
src/cuhpmc/kernels/: EmitterIndexedTriangleIndices.cu  EmitterIndexedVertices.cu  EmitterTriIdxKernels.cu  HP5Traversal.hpp  IsoSurfaceBuildupApexKernel.cu  IsoSurfaceBuildupBaseKernel.cu  IsoSurfaceBuildupDoubleKernel.cu  IsoSurfaceBuildupSingleKernel.cu  IsoSurfaceIndexedBuildupBaseKernel.cu  IsoSurfaceIndexedKernels.cu  hp5_buildup_apex.hpp  hp5_buildup_base_indexed_triple_gb.cu  hp5_buildup_base_indexed_triple_gb.hpp  hp5_buildup_base_triple_gb.cu  hp5_buildup_level_double.cu  hp5_buildup_level_single.cu  hp5_writer.cu  hp5_writer.hpp
src/cuhpmc/shaders/: gl_direct_fs_430.glsl  gl_direct_gs_430.glsl  gl_direct_vs_430.glsl  hp5_downtraversal_430.glsl
src/glhpmc/: Field.cpp  GPGPUQuad.cpp  HistoPyramid.cpp  IsoSurfaceRenderer.cpp  Logger.cpp  VertexCountTable.cpp  tables.cpp
src/glhpmc/shaders/: reduction_first_fs_130.glsl  reduction_upper_fs_130.glsl
tests/: simplemipmapbuildup.cpp
